--- a/Servidor/Servidor.csproj
+++ b/Servidor/Servidor.csproj
@@ -61,8 +61,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ClienteHandler.cs" />
+    <Compile Include="Game.cs" />
+    <Compile Include="Room.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Security.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
